--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -15,7 +16,6 @@
     "install": "^0.13.0",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
     "npm": "^8.2.0"
   }
 }
