user apis starts

--- a/Config.env
+++ b/Config.env
@@ -1,3 +1,7 @@
 PORT= 3000
 MONGODB_URL = mongodb+srv://saqib:saqib123@cluster0.in3fd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DB_PASSWORD=saqib123
+
+JWT_SECRET=this_is_a_Secret
+JWT_EXPIRES_IN=90d
+
