reset password functionality implemented

--- a/Config.env
+++ b/Config.env
@@ -5,3 +5,10 @@ DB_PASSWORD=saqib123
 JWT_SECRET=this_is_a_Secret
 JWT_EXPIRES_IN=90d
 
+
+EMAIL_PASSWORD=PASSWORD
+EMAIL_USERNAME=YOUR_EMAIL_USERNAME
+EMAIL_HOST=MAILTRAP
+EMAIL_PORT=25
+SENDER_EMAIL=sndremail
+
