--- a/Config.env
+++ b/Config.env
@@ -1,3 +1,5 @@
+
+NODE_ENV = development
 PORT= 3000
 MONGODB_URL = mongodb+srv://saqib:saqib123@cluster0.in3fd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DB_PASSWORD=saqib123
