--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^6.0.1",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
-    "npm": "^8.2.0"
+    "npm": "^8.2.0",
+    "xss-clean": "^0.1.1"
   }
 }
