--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "nodemailer": "^6.7.2",
     "npm": "^8.2.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
