--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "start:prod": " NODE_ENV=production nodemon server.js"
-
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "npm": "^8.2.0",
+    "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
